# sdl_basegame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  classdiagram.drawio  packages.config  sdl_basegame.sln  sdl_basegame.vcxproj  sdl_basegame.vcxproj.filters  vcpkg.json
.run/: sdl_basegame.run.xml
CMAKE/: FindSDL2Mixer.cmake  FindSDL2TTF.cmake
asset/graphic/: 16x16_hsnr64.xcf
asset/music/: severance.opus
doc/: classdiagram.drawio
src/: autocast_ptr.h  camerastate.cpp  collider.h  examplegame.cpp  examplegame.h  gamebase.cpp  gamebase.h  global.h  introstate.cpp  main.cpp  plasmastate.cpp  recthelper.h  reusevector.h  shooterstate.cpp  sortstate.cpp  tilefont.h  tiles.h
src/example/: camerastate.cpp  examplegame.cpp  examplegame.h  hsnr64.h  introstate.cpp  main.cpp  mapeditor.cpp  plasmastate.cpp  pongmain.cpp  shooterstate.cpp  sortstate.cpp
